--- a/home-page-style.css
+++ b/home-page-style.css
@@ -45,6 +45,12 @@ a {
     font-size: 1.5vw;
     color: black;
 }
+@media (max-width : 360px) {
+    .nav-item {
+        font-size: 3.5vw;
+        color: black;
+    }
+}
 
 .nav-item:first-child {
     margin-left: 1vw;
@@ -82,6 +88,8 @@ h2{
     h1 {
         font-size: 5vh;
     }
+
+
 }
 
 .main-content {
@@ -96,10 +104,34 @@ h2{
     overflow: hidden;
 }
 
+.secondary-content {
+    height: 80%;
+    background-color: rgb(3, 85, 0);
+    width: 100%;
+    position: absolute;
+    top: 120%;
+    background-image: url(Images/bkg/DarkGrass.png);
+    background-size: 150%;
+    background-repeat: repeat;
+    overflow: hidden;
+}
+
 .merge-banner {
     width: 100%;
     height: 20%;
     background-image: url(Images/bkg/merge.png);
+    background-size: 150%;
+    background-repeat: no-repeat;
+    
+}
+
+.dark-merge-banner {
+    width: 100%;
+    height: 20%;
+    position: absolute;
+    bottom: 0%;
+    margin-bottom: -5vw;
+    background-image: url(Images/bkg/DarkMerge.png);
     background-size: 150%;
     background-repeat: no-repeat;
     
