--- a/home-page-style.css
+++ b/home-page-style.css
@@ -22,7 +22,7 @@ a {
 
 #nav-bar-opacitic {
     opacity: 0%;
-    z-index: 1;
+    z-index: 2;
     background-image: url(Images/bkg/RockMerge.png);
     height: 15%;
     width: 100%;
@@ -136,6 +136,20 @@ h2{
     
 }
 
+.art-image-table{
+    transition-duration: 0;
+    margin: -1%;
+    height: 15vw;
+    overflow: scroll;
+    width:15vw;
+    padding: 0.1vw;
+    object-fit: cover;
+}
+.art-image-table:hover{
+    cursor: pointer;
+    transform: translate(0, -0.3vw);
+}
+
 #Duck {
     top: 40%;
     position: absolute;
@@ -144,7 +158,7 @@ h2{
     height: 32vh;
     background-size: 15vw ;
     background-repeat: no-repeat;
-    z-index: 3;
+    z-index: 1;
     transition-duration: 0s;
 }
 
